--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -8,13 +8,36 @@
   font-family: "Roboto", sans-serif;
   font-size: 10pt;
   line-height: 150%;
-  color: black;
+  color: #000000;
 }
 .page-template-page-homepage-php p {
   margin: 0;
 }
+.page-template-page-homepage-php a {
+  color: #444444;
+  text-decoration: none;
+  border-bottom: 1px solid #444444;
+}
+.page-template-page-homepage-php a:hover {
+  color: #ca220f;
+  border-color: #ca220f;
+}
 .page-template-page-homepage-php header[role="banner"] {
   display: none;
+}
+.page-template-page-homepage-php .blackButton {
+  font-family: "proxima-nova", sans-serif;
+  display: inline-block;
+  padding: .5em .75em;
+  border: none;
+  background-color: black;
+  color: white;
+  font-size: 1.5em;
+  font-weight: 700;
+}
+.page-template-page-homepage-php .blackButton:hover {
+  color: white;
+  background-color: #ca220f;
 }
 .page-template-page-homepage-php .shout {
   font-family: "proxima-nova", sans-serif;
@@ -25,7 +48,7 @@
   margin: .5em 0;
 }
 .page-template-page-homepage-php .sectionHeader {
-  margin: 2em 0;
+  margin: 3em 0 2em 0;
   text-align: center;
 }
 .page-template-page-homepage-php .sectionHeader h2 {
@@ -36,11 +59,16 @@
   line-height: 90%;
   margin: 0;
 }
-.page-template-page-homepage-php .sectionHeader p {
+.page-template-page-homepage-php .sectionHeader .special {
   font-family: "proxima-nova", sans-serif;
   font-size: 1.25em;
   font-weight: 500;
   line-height: 150%;
+}
+.page-template-page-homepage-php .sectionHeader .long {
+  font-size: 1.15em;
+  line-height: 150%;
+  margin: .5em 0;
 }
 .page-template-page-homepage-php .programStories {
   list-style-type: none;
@@ -48,13 +76,18 @@
 }
 .page-template-page-homepage-php .programStories li {
   text-align: center;
-  color: white;
-  padding: 1.5em;
 }
-.page-template-page-homepage-php .programStories li[data-topic="doprava"] {
+.page-template-page-homepage-php .programStories li [data-topic] {
+  padding: 1.5em;
+  color: white;
+}
+.page-template-page-homepage-php .programStories li [data-topic=""] {
+  color: black;
+}
+.page-template-page-homepage-php .programStories li [data-topic="doprava"] {
   background-color: #ca220f;
 }
-.page-template-page-homepage-php .programStories li[data-topic="turismus"] {
+.page-template-page-homepage-php .programStories li [data-topic="turismus"] {
   background-color: #a82da4;
 }
 .page-template-page-homepage-php .programStories li .title {
@@ -65,11 +98,26 @@
 }
 .page-template-page-homepage-php .programStories li .title a {
   color: white;
+  border: none;
 }
 .page-template-page-homepage-php .programStories li .perex {
   margin: 1em 0 0 0;
   font-size: .9em;
   line-height: 150%;
+}
+.page-template-page-homepage-php .posts {
+  list-style-type: none;
+  padding: 0;
+}
+.page-template-page-homepage-php .posts li {
+  clear: both;
+  margin: 2em 0;
+}
+.page-template-page-homepage-php .posts li .title {
+  font-family: "proxima-nova", sans-serif;
+  font-size: 2.75em;
+  line-height: 135%;
+  margin: 0 0 .25em 0;
 }
 .page-template-page-homepage-php .candidates {
   list-style-type: none;
@@ -77,10 +125,11 @@
 }
 .page-template-page-homepage-php .candidates li {
   text-align: center;
+  margin: 1em 0;
 }
 .page-template-page-homepage-php .candidates li .name {
   font-family: "proxima-nova", sans-serif;
   font-size: 1.3em;
   font-weight: 700;
-  margin: 1em 0 .1em 0;
+  margin: 1em 0 .3em 0;
 }
