--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -48,7 +48,7 @@
   margin: .5em 0;
 }
 .page-template-page-homepage-php .sectionHeader {
-  margin: 3em 0 2em 0;
+  margin: 3em auto 2em auto;
   text-align: center;
 }
 .page-template-page-homepage-php .sectionHeader h2 {
