--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -9,9 +9,16 @@
   font-size: 10pt;
   line-height: 150%;
   color: #000000;
+  padding: 0;
+  margin: 0;
 }
 .page-template-page-homepage-php h1 {
-  margin: 0;
+  margin: 2em 0 0 0;
+}
+@media screen and (max-width: 768px) {
+  .page-template-page-homepage-php h1 {
+    margin: 1em 0 0 0;
+  }
 }
 .page-template-page-homepage-php h1 .chcu {
   display: block;
@@ -126,11 +133,7 @@
 @media screen and (max-width: 768px) {
   .page-template-page-homepage-php .shout {
     font-size: 2em;
-  }
-}
-@media screen and (max-width: 480px) {
-  .page-template-page-homepage-php .shout {
-    font-size: 1.5em;
+    line-height: 112.5%;
   }
 }
 .page-template-page-homepage-php .sectionHeader {
@@ -144,6 +147,18 @@
   text-transform: uppercase;
   line-height: 90%;
   margin: 0;
+}
+@media screen and (max-width: 768px) {
+  .page-template-page-homepage-php .sectionHeader h2 {
+    font-size: 3.5em;
+    line-height: 105%;
+  }
+}
+@media screen and (max-width: 480px) {
+  .page-template-page-homepage-php .sectionHeader h2 {
+    font-size: 2.5em;
+    line-height: 112.5%;
+  }
 }
 .page-template-page-homepage-php .sectionHeader .special {
   font-family: "proxima-nova", sans-serif;
