--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -30,9 +30,15 @@
 	font-size: 10pt;
 	line-height: @line-height;
 	color: @color-text;
+	padding: 0;
+	margin: 0;
 
 	h1 {
-		margin: 0;
+		margin: 2em 0 0 0;
+
+		@media screen and (max-width: @screen-sm) {
+			margin: 1em 0 0 0;
+		}
 
 		.chcu {
 			display: block;
@@ -146,10 +152,7 @@
 
 		@media screen and (max-width: @screen-sm) {
 			font-size: 2em;
-		}
-
-		@media screen and (max-width: @screen-xs) {
-			font-size: 1.5em;
+			line-height: @line-height * .75;
 		}
 
 	}
@@ -165,6 +168,17 @@
 			text-transform: uppercase;
 			line-height: @line-height * .6;
 			margin: 0;
+
+			@media screen and (max-width: @screen-sm) {
+				font-size: 3.5em;
+				line-height: @line-height * .7;
+			}
+
+			@media screen and (max-width: @screen-xs) {
+				font-size: 2.5em;
+				line-height: @line-height * .75;
+			}
+
 		}
 
 		.special {
