--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -245,7 +245,17 @@
 				.proxima;
 				font-size: 1.3em;
 				font-weight: 700;
+				line-height: @line-height * .9;
 				margin: 1em 0 .3em 0;
+
+				.firstName, .lastName {
+
+					@media screen and (max-width: @screen-xs) {
+						display: block;
+					}
+
+				}
+
 			}
 
 		}
