--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -252,6 +252,14 @@ hr {
   border: none;
   margin: 2.5em 0;
 }
+#fb-root {
+  display: none;
+}
+.fb_iframe_widget,
+.fb_iframe_widget span,
+.fb_iframe_widget span iframe[style] {
+  width: 100% !important;
+}
 footer[role="general"] .logo {
   width: 65%;
 }
