--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -301,6 +301,14 @@ hr {
 	margin: 2.5em 0;
 }
 
+#fb-root {
+	display: none;
+}
+
+.fb_iframe_widget, .fb_iframe_widget span, .fb_iframe_widget span iframe[style] {
+	width: 100% !important;
+}
+
 footer[role="general"] {
 
 	.logo {
