--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -240,7 +240,7 @@ a {
 hr {
 	clear: both;
 	background-image: url('rainbow.png');
-	background-size: cover;
+	background-size: contain;
 	height: 1px;
 	width: 100%;
 	border: none;
@@ -319,6 +319,10 @@ hr {
 }
 
 footer[role="general"] {
+
+	.facebook {
+		margin: 2em 0;
+	}
 
 	.logo {
 		width: 65%;
