--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -197,7 +197,7 @@ a:hover {
 hr {
   clear: both;
   background-image: url('rainbow.png');
-  background-size: cover;
+  background-size: contain;
   height: 1px;
   width: 100%;
   border: none;
@@ -267,6 +267,9 @@ hr {
 .fb_iframe_widget span,
 .fb_iframe_widget span iframe[style] {
   width: 100% !important;
+}
+footer[role="general"] .facebook {
+  margin: 2em 0;
 }
 footer[role="general"] .logo {
   width: 65%;
