--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -192,7 +192,7 @@
 				font-size: 1.3em;
 				font-weight: 700;
 				line-height: @line-height * .9;
-				margin: 1em 0 .3em 0;
+				margin: 1em 0 .2em 0;
 
 				.firstName, .lastName {
 
@@ -202,6 +202,10 @@
 
 				}
 
+			}
+
+			.occupation {
+				margin: 0;
 			}
 
 		}
