--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -202,6 +202,13 @@ a:hover {
   border-color: #666666;
   text-decoration: none;
 }
+a.img {
+  border: none;
+  line-height: 0;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+}
 hr {
   clear: both;
   background-image: url('rainbow.png');
@@ -276,6 +283,11 @@ hr {
 .fb_iframe_widget span,
 .fb_iframe_widget span iframe[style] {
   width: 100% !important;
+}
+.squareImagePlaceholder {
+  display: inline-block;
+  background-color: #DDD;
+  width: 100%;
 }
 footer[role="general"] .facebook {
   margin: 2em 0;
