--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -243,6 +243,14 @@ a {
 		text-decoration: none;
 	}
 
+	&.img {
+		border: none;
+		line-height: 0;
+		width: 100%;
+		height: 100%;
+		display: inline-block;
+	}
+
 }
 
 hr {
@@ -325,6 +333,12 @@ hr {
 
 .fb_iframe_widget, .fb_iframe_widget span, .fb_iframe_widget span iframe[style] {
 	width: 100% !important;
+}
+
+.squareImagePlaceholder {
+	display: inline-block;
+	background-color: #DDD;
+	width: 100%;
 }
 
 footer[role="general"] {
