--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -113,6 +113,33 @@
 
 	}
 
+	.topics {
+		text-align: center;
+		margin: 0 0 1.5em 0;
+
+		h3 {
+			.proxima;
+			font-weight: 900;
+			text-transform: uppercase;
+			display: inline-block;
+			font-size: 1em;
+			margin: 0 1em;
+		}
+
+		ul {
+			display: inline;
+			padding: 0;
+			margin: 0;
+
+			li {
+				display: inline-block;
+				margin: 0 1em;
+			}
+
+		}
+
+	}
+
 	.programStories {
 		list-style-type: none;
 		padding: 0;
@@ -260,7 +287,7 @@ hr {
 	height: 2px;
 	width: 100%;
 	border: none;
-	margin: 2.5em 0;
+	margin: 1.5em 0;
 }
 
 .shout {
@@ -288,7 +315,7 @@ hr {
 }
 
 .sectionHeader {
-	margin: 2em auto;
+	margin: 1em auto;
 	text-align: center;
 
 	h2 {
