--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -159,7 +159,7 @@
 }
 .page-template-page-homepage-php .posts li {
   clear: both;
-  margin: 2em 0;
+  margin: 0 0 2em 0;
 }
 .page-template-page-homepage-php .posts li .title {
   font-family: "proxima-nova", sans-serif;
