--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -450,6 +450,17 @@ footer[role="general"] {
 			margin: 0;
 		}
 
+		.current-menu-item {
+
+			a {
+				background: none;
+				color: black;
+				border: none;
+				pointer-actions: none;
+			}
+
+		}
+
 	}
 
 
