--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -354,6 +354,22 @@ hr {
 
 }
 
+.pageHeader {
+	text-align: center;
+
+	h1 {
+		.proxima;
+		font-weight: 900;
+		font-size: 8em;
+		text-transform: uppercase;
+	}
+
+	.lead {
+		font-size: 1.4em;
+	}
+
+}
+
 #fb-root {
 	display: none;
 }
@@ -445,7 +461,7 @@ footer[role="general"] {
 
 		.navbar-brand-container, .navbar-collapse li {
 			display: inline-block;
-			padding: 1em .75em;
+			padding: 2em .75em;
 		}
 
 		.navbar-brand-container {
