--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -177,30 +177,6 @@
     font-size: 1.5em;
   }
 }
-.page-template-page-homepage-php .candidates {
-  list-style-type: none;
-  padding: 0;
-}
-.page-template-page-homepage-php .candidates li {
-  text-align: center;
-  margin: 1em 0;
-}
-.page-template-page-homepage-php .candidates li .name {
-  font-family: "proxima-nova", sans-serif;
-  font-size: 1.3em;
-  font-weight: 700;
-  line-height: 135%;
-  margin: 1em 0 .2em 0;
-}
-@media screen and (max-width: 480px) {
-  .page-template-page-homepage-php .candidates li .name .firstName,
-  .page-template-page-homepage-php .candidates li .name .lastName {
-    display: block;
-  }
-}
-.page-template-page-homepage-php .candidates li .occupation {
-  margin: 0;
-}
 body {
   font-family: "Roboto", sans-serif;
   overflow-x: hidden;
@@ -409,4 +385,28 @@ footer[role="general"] .links li {
     border: none;
     pointer-actions: none;
   }
+}
+.candidates {
+  list-style-type: none;
+  padding: 0;
+}
+.candidates li {
+  text-align: center;
+  margin: 1em 0;
+}
+.candidates li .name {
+  font-family: "proxima-nova", sans-serif;
+  font-size: 1.3em;
+  font-weight: 700;
+  line-height: 135%;
+  margin: 1em 0 .2em 0;
+}
+@media screen and (max-width: 480px) {
+  .candidates li .name .firstName,
+  .candidates li .name .lastName {
+    display: block;
+  }
+}
+.candidates li .occupation {
+  margin: 0;
 }
