--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -462,7 +462,7 @@ footer[role="general"] {
 				background: none;
 				color: black;
 				border: none;
-				pointer-actions: none;
+				pointer-events: none;
 			}
 
 		}
