--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -415,7 +415,7 @@ footer[role="general"] {
 			clear: none;
 			padding: 0;
 			margin: 0;
-			line-height: 16px;
+			line-height: 17px;
 		}
 
 		.navbar-collapse.collapse {
@@ -443,15 +443,14 @@ footer[role="general"] {
 			font-size: 18px;
 			font-weight: 900;
 			display: inline-block;
-			border-bottom: 1px solid #999;
+			color: #B5B5B5;
+			border-bottom: 1px solid #EEE;
 			padding: 0;
 			margin: 0;
-		}
 
-		.navbar-collapse {
-
-			a {
-
+			&:hover {
+				color: @color-link;
+				border: none;
 			}
 
 		}
